test/simple/typeerrors/Examples/ExprEnumTo.hs
module ExprEnumTo where

f = [ 13 , 15 .. "aap" ]
